uploading build folder

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,4 @@
 # PORT=8800
-MONGO_URL=mongodb+srv://mahmoudRagab:ziko123456789@cluster0.oodkc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URL=mongodb+srv://mahmoudRagab:ziko123456789@cluster0.oodkc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://others2000:ziko123456789@cluster0.oodkc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_CONNECTION_URL=mongodb://localhost:27017/zikosocail
